--- a/Hybrid-ModularData-Mercury/src/org/tour/mercury/com/properties/OR.properties
+++ b/Hybrid-ModularData-Mercury/src/org/tour/mercury/com/properties/OR.properties
@@ -25,3 +25,13 @@ register_submit_button=name:register
 flightser_tripType=name:tripType
 flightser_passanger=name:passCount
 flightser_departingfrom=xpath://td/select[starts-with(@name,"fromPort")]
+flightser_frommonth=name:fromMonth
+flightser_fromDay=name:fromDay
+flightser_toPort=name:toPort
+flightser_toMonth=name:toMonth
+flightser_toDay=name:toDay
+flightser_service_coach=xpath://input[contains(@value,"Coach")]
+flightser_service_business=xpath://input[contains(@value,"Business")]
+flightser_service_first=xpath://input[contains(@value,"First")]
+flightser_airline_preference=name:airline
+flightser_continue=xpath://input[contains(@name,"findFlights")]
