--- a/Hybrid-ModularData-Mercury/src/org/tour/mercury/com/properties/Global.properties
+++ b/Hybrid-ModularData-Mercury/src/org/tour/mercury/com/properties/Global.properties
@@ -1,9 +1,20 @@
 #Base config
 base_url=http://newtours.demoaut.com/index.php
-reg_url=
+reg_url=http://newtours.demoaut.com/mercuryreservation.php
+flight_search_url=http://newtours.demoaut.com/mercuryreservation.php
+
+#Titles
+login_url=Welcome: Mercury Tours
+home_url=Find a Flight: Mercury Tours: 
+flight_search_title=Find a Flight: Mercury Tours: 
+flight_select_title=Select a Flight: Mercury Tours
+flight_book_title=Book a Flight: Mercury Tours
 
 #Valid Login Credinitial
 username=rmani2005
 password=Mani-12345
 
-a
+#Other Config
+defaultbrowser=firefox
+defaultusername=rmani2005
+defaultpassword=Mani-12345
